# WBR_SIM

./: .gitignore  Dockerfile  README.md  building_robot.sdf
src/gazebo_models/: model.sdf
src/gazebo_models/meshes/: Calf_Link_Left_Collision.stl  MainBody_Collision.stl  ThighLink_Active_Left_Visual.stl  ThighLink_Active_Right_Collision.stl  ThighLink_Passive_Right_Collision.stl  ThighLink_Passive_Right_Visual.stl  Wheel_Left_Collision.stl  Wheel_Left_Visual.stl  Wheel_Right_Collision.stl
src/wbr_controller/: CMakeLists.txt  package.xml
src/wbr_controller/include/wbr_controller/: lqr_wheel_servo_controller.hpp  pd_hip_servo_controller.hpp  pid_hip_servo_controller.hpp
src/wbr_controller/include/wbr_estimator/: ekf.hpp
src/wbr_controller/msg/: WbrState.msg
src/wbr_gazebo/: CMakeLists.txt  package.xml
src/wbr_gazebo/include/: pow.hpp  wbr_state_talker.hpp
src/wbr_gazebo/launch/: wheel_biped_control.launch.py
src/wbr_gazebo/src/: wbr_state_talker.cpp
src/wbr_gazebo/wbr_model/: model.sdf  model.xacro
src/wbr_gazebo/wbr_model/meshes/: Calf_Link_Right_Collision.stl
src/wbr_model/: model.sdf
src/wbr_model/meshes/: Calf_Link_Left_Visual.stl  Calf_Link_Right_Visual.stl  ThighLink_Active_Left_Collision.stl  ThighLink_Active_Right_Visual.stl  Wheel_Right_Visual.stl
src/wbr_pow/: CMakeLists.txt  package.xml
src/wbr_pow/include/: lqr_vyb_controller.hpp  param.hpp  pd_hr_controller.hpp  pow_core.hpp  wbr_ekf.hpp
src/wbr_pow/include/wbr_estimator/: ekf.hpp
src/wbr_pow/include/wbr_parameter/: parameters.hpp
src/wbr_pow/include/wbr_pow/: pow.hpp
src/wbr_pow/msg/: WbrComCal.msg  WbrControl.msg  WbrDesState.msg  WbrEstState.msg  WbrHR.msg  WbrPitchEq.msg  WbrState.msg
src/wbr_pow/src/: lqr_vyb_controller.cpp  pow.cpp  pow_core.cpp  wbr_ekf.cpp  wbr_state_talker.cpp
src/wbr_pow/wbr_model/: model.sdf
src/wbr_pow/wbr_model/meshes/: ThighLink_Passive_Left_Collision.stl  ThighLink_Passive_Left_Visual.stl
