<?xml version="1.0"?>
<package format="3">
  <name>wbr_gazebo</name>
  <version>0.0.0</version>
  <description>ROS2 gazebo package for wheeled bipedal robot</description>
  <maintainer email="jhwoo200@gmail.com">jonghyun</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>